--- a/configs/orangepi_zero3_defconfig
+++ b/configs/orangepi_zero3_defconfig
@@ -7,7 +7,8 @@ CONFIG_DEFAULT_DEVICE_TREE="sun50i-h616-orangepi-zero3"
 CONFIG_CONSOLE_MUX=y
 CONFIG_OF_BOARD=y
 CONFIG_SYS_TEXT_BASE=0x4A000000
-
+CONFIG_DRAM_ZQ=3881979
+CONFIG_DRAM_CLK=792
 #system
 CONFIG_ARM_SMCCC=y
 CONFIG_SUNXI_DMA=y
